<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rain.currency.ui.ConverterActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/baseContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtBase"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtTarget"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
