<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/floating_margin"
        android:background="@drawable/border"
        android:elevation="@dimen/floating_margin"
        tools:targetApi="lollipop">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/space_normal"
            android:visibility="invisible"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/baseContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivBaseIcon"
                    android:layout_width="@dimen/country_flag_size"
                    android:layout_height="@dimen/country_flag_size"
                    app:civ_border_color="@color/borderColor"
                    app:civ_border_width="@dimen/flag_border_size"
                    tools:src="@drawable/ic_sgd" />

                <TextView
                    android:id="@+id/tvBaseUnit"
                    style="@style/TitleText"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_medium"
                    android:layout_marginStart="@dimen/space_medium"
                    tools:text="SGD" />

                <EditText
                    android:id="@+id/edtBase"
                    style="@style/Text.EditText.Decimal"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tvBaseSymbol"
                    style="@style/Text"
                    android:layout_width="@dimen/unit_size"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1"
                    tools:text="$" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="@dimen/space_normal"
                android:layout_marginTop="@dimen/space_normal"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivTargetIcon"
                    android:layout_width="@dimen/country_flag_size"
                    android:layout_height="@dimen/country_flag_size"
                    app:civ_border_color="@color/borderColor"
                    app:civ_border_width="@dimen/flag_border_size"
                    tools:src="@drawable/ic_vnd" />

                <TextView
                    android:id="@+id/tvTargetUnit"
                    style="@style/TitleText"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_medium"
                    android:layout_marginStart="@dimen/space_medium"
                    android:textIsSelectable="true"
                    tools:text="VND" />

                <EditText
                    android:id="@+id/edtTarget"
                    style="@style/Text.EditText.Decimal"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/tvTargetSymbol"
                    style="@style/Text"
                    android:layout_width="@dimen/unit_size"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:lines="1"
                    tools:text="₫" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@color/black"
            android:textSize="@dimen/size_large"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/btnMoney"
        android:layout_width="@dimen/button_money_size"
        android:layout_height="@dimen/button_money_size"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/floating_margin"
        android:elevation="@dimen/floating_margin"
        android:src="@drawable/ic_money"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="1dp"
        app:civ_fill_color="@color/colorPrimary"
        tools:visibility="visible"
        tools:targetApi="lollipop" />
</RelativeLayout>
